please avoid 'vertically shifted by half a line'

--- a/css/blog-post.css
+++ b/css/blog-post.css
@@ -117,7 +117,7 @@ a:hover {
   .container {
     padding-top: 0px;
   }
-  p, li, a, code {
+  * {
     page-break-inside:avoid;
   }
 }
